# nix-bazel

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bzlmod  flake.nix  nixpkgs.nix
src/cli/: BUILD.bazel  main.cc
src/signal/: BUILD.bazel  signal.cc  signal.h  signal_test.cc
