load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "signal",
    srcs = ["signal.cc"],
    hdrs = ["signal.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "signal_test",
    size = "small",
    srcs = ["signal_test.cc"],
    deps = [
        ":signal",
        "@googletest//:gtest_main",
    ],
)